<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.MainFragment">


<!--    val location: String,-->

<!--    val lastUpdate: String,-->

<!--    val temperature: String,-->

<!--    val condition: Condition,-->

<!--    val wind: Int,-->

<!--    val humidity: Int,-->

<!--    val cloud: Int,-->

<!--    val feelsLike: Int,-->


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="8dp"
        app:cardElevation="12dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#25394764">

            <TextView
                android:id="@+id/temperatureTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textSize="48sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="12" />

            <TextView
                android:id="@+id/conditionTextTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Ясно"
                app:layout_constraintEnd_toEndOf="@id/conditionIconIV"
                app:layout_constraintBottom_toBottomOf="@id/temperatureTV"
                app:layout_constraintStart_toEndOf="@id/temperatureTV"
                app:layout_constraintTop_toBottomOf="@id/conditionIconIV"
                app:layout_constraintVertical_chainStyle="packed" />


            <ImageView
                android:id="@+id/conditionIconIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:src="@drawable/ic_baseline_cloud_24"
                app:layout_constraintBottom_toTopOf="@id/conditionTextTV"
                app:layout_constraintStart_toEndOf="@id/temperatureTV"
                app:layout_constraintTop_toTopOf="@id/temperatureTV"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/lastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/default_last_update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/locationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/default_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/buttonGetWeather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/MoonDayInfoTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="bottom"

        android:background="@drawable/main_text_background"
        android:padding="12dp"
        android:text="some tetxt in tihs \u2103" />

</LinearLayout>